<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="create_account">Create account</string>
    <string name="get_support">Get support</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="onboarding_title_1">Get up to $150* now!</string>
    <string name="onboarding_title_2">The most inclusive cash advance app on the market.</string>
    <string name="onboarding_title_3">Save hundreds of $ on BOTH bank overdraft fees &amp; remittance fees.</string>
    <string name="onboarding_content_1">Recipients of Social Security, SSI, other unearned income (child support, alimony etc.) may apply.\n\n*Cash could be delivered in 2 hours.\n*Eligibility rules apply</string>
    <string name="onboarding_subtitle_1">No tricks. No interest. No credit checks.\nNo SSN. No ITIN. No hidden or late fees.</string>
    <string name="onboarding_news_2">The only cash advance app in three languages.\n(and more to come)</string>
    <string name="work_in_progress">(work in progress)</string>
    <string name="sign_up">Sign up</string>
    <string name="first_sign_up_screen_message_one">You\'ll be alerted on your phone when your bank balance is running too low.</string>
    <string name="first_sign_up_screen_message_two">You\'ll be able to request a cash advance to keep up with bills &amp; unexpected expenses.</string>
    <string name="first_sign_up_screen_message_three">Do you often send money to loved ones overseas? You could save hundreds of $ in transfer fees (work in progress).</string>
    <string name="continue_name">Continue</string>
    <string name="phone_number_question">What is your phone number?</string>
    <string name="phone_number">Phone number</string>
    <string name="country_code_US">+1</string>
    <string name="phone_number_hint">ex: 0123456789</string>
    <string name="phone_number_length_error">The phone number must contain 10 digits</string>
    <string name="phone_number_digits_error">The phone number must contain digits only</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="use_your_email">Use your email instead</string>
    <string name="use_your_phone">Use your phone instead</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="password_label_caps">PASSWORD</string>
    <string name="email_label_caps">EMAIL</string>
    <string name="incorrect_credentials_with_email">Incorrect email or password.</string>
    <string name="incorrect_credentials_with_phone">Incorrect phone or password.</string>
    <string name="password_can_not_be_empty">Password cannot be empty.</string>
    <string name="email_or_phone_can_not_be_empty">Email/phone cannot be empty.</string>
    <string name="code_from_sms">Enter the code received via SMS</string>
    <string name="code_from_email">Enter the code received via email</string>
    <string name="resend_code">Resend code</string>
    <string name="resend_code_counter">Resend code in %d s</string>
    <string name="finish_signing_up">Finish signing up</string>
    <string name="choose_your_password">Choose your password</string>
    <string name="password_label">PASSWORD*</string>
    <string name="confirm_password_label">CONFIRM PASSWORD*</string>
    <string name="password_length">Password must be at least 8 characters long.</string>
    <string name="password_format">Password must contain at least one digit, one letter and one special character.</string>
    <string name="password_not_match">Passwords don\'t match.</string>
    <string name="terms_and_conditions">By checking this box you agree to our <annotation action="openTS">Terms of Service</annotation> and <annotation action="openPP">Privacy Policy</annotation>, as well as our partner <annotation action="openDTS">Dwolla\'s Terms of Service</annotation> and <annotation action="openDPP">Privacy Policy</annotation>.</string>
    <string name="mandatory_message">All the fields marked with * are mandatory.</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="et_hint">type here</string>
    <string name="city_state_hint">ex: Chicago, IL</string>
    <string name="et_zip_code">ZIP CODE*</string>
    <string name="et_city_state">CITY AND STATE*</string>
    <string name="et_email">EMAIL*</string>
    <string name="et_first_name">FIRST NAME*</string>
    <string name="et_last_name">LAST NAME*</string>
    <string name="et_street">STREET*</string>
    <string name="zip_code_error">ZIP codes must be 5-digit numbers.</string>
    <string name="email_error">Invalid email address.</string>
    <string name="city_and_state_error">Invalid input! Enter only letters separated by a comma. Ex: Chicago, IL</string>
    <string name="street_error">Address should be at least 2 characters long.</string>
    <string name="name_error">Enter only letters or special characters for your name.</string>
    <string name="first_name_length_error">First name should be at least 2 characters long.</string>
    <string name="last_name_length_error">Last name should be at least 2 characters long.</string>
    <string name="link_your_bank_account">Link your bank account</string>
    <string name="request_a_cash_advance">Request a cash advance</string>
    <string name="link_account_message_one">In order to get cash advances, you must link your bank account to Cashli.</string>
    <string name="cash_delivered_time">Cash could be delivered in 2 hours.</string>
    <string name="up_to_sum">Up to $%s!</string>
    <string name="hello_user">Hi, %s!</string>
    <string name="hello">Hi!</string>
    <string name="request_cash_approved_for">You’ve been approved for</string>
    <string name="claim_cash_now">Claim cash now</string>
    <string name="request_cash_balance_label">Cash advance balance</string>
    <string name="request_cash_balance_details">Including tips &amp; express fee, if applicable.</string>
    <string name="scheduled_repayment_date">Scheduled repayment date: %s</string>
    <string name="bank_account_balance">Bank account balance</string>
    <string name="bank_account_check_date">As of %s</string>
    <string name="bank_account_subtype_and_mask">%s - %s</string>
    <string name="bank_account_subtype_checking">Checking</string>
    <string name="bank_account_subtype_depository">Depository</string>
    <string name="bank_account_subtype_savings">Savings</string>
    <string name="bank_transactions">Latest bank transactions</string>
    <string name="back_to_top">Back to top</string>
    <string name="warning_lost_connection">We lost connection with your bank account. <annotation action="openResolveConnection">Resolve now</annotation></string>
    <string name="warning_account_suspended">Your account has been suspended. Please <annotation action="callUs">contact support</annotation> for more info.</string>
    <string name="unpause_your_membership">Unpause your membership</string>
    <string name="can_not_get_cash_advance_see_more">Unfortunately, you can\'t get a cash advance at this time. <annotation action="openIneligibilityScreen">See more</annotation></string>
    <string name="link_my_bank_account">Link my bank account</string>
    <string name="link_my_bank_account_title">Link your bank account where paychecks are deposited into.</string>
    <string name="link_my_bank_account_message_one">The bank account must be at least 2 months old.</string>
    <string name="link_my_bank_account_message_two">For a joint account, only one of the account holders will be able to link it to the app.</string>
    <string name="link_my_bank_account_message_three">Cash advances will be transferred to the same bank account.</string>
    <string name="link_my_bank_account_message_four">We use bank-level and military-grade encryption tools to protect your data.</string>
    <string name="can_not_get_cash_advance">Unfortunately, you can\'t get a cash advance at this time.</string>
    <string name="ineligible_message_one">Since Cashli does not check your credit history, it has to rely on your bank account transaction history to determine your eligibility for a cash advance.</string>
    <string name="ineligible_message_two">If you have another bank account where paychecks are deposited into, you may connect it to the app instead and try again.</string>
    <string name="ineligible_requirements">Make sure the following requirements have been met:</string>
    <string name="salary">Salary</string>
    <string name="transaction_history">Transaction history on your connected bank account</string>
    <string name="spending_habits">Spending habits around paydays</string>
    <string name="creation_date">Creation date of your bank account</string>
    <string name="salary_tooltip">Salary text pending..</string>
    <string name="transaction_history_tooltip">Transaction history on your connected bank account pending..</string>
    <string name="spending_habits_tooltip">Spending habits around paydays pending..</string>
    <string name="creation_date_tooltip">Creation date of your bank account pending..</string>
    <string name="ineligible_try_again">You may try again after your next paycheck.</string>
    <string name="forgot_password">Forgot password</string>
    <string name="confirm_one_time_password">Confirm one time password</string>
    <string name="reset_password">Reset your password</string>
    <string name="forgot_password_screen_message_email">Please enter the email address you used to create your Cashli account.</string>
    <string name="forgot_password_screen_message_phone">Please enter the phone number you used to create your Cashli account.</string>
    <string name="type_new_password">Type a new password</string>
    <string name="confirm_one_time_password_message">Code has been sent to %s</string>
    <string name="wrong_email_error" tools:ignore="UnusedResources">There is no existing account with this email.</string>
    <string name="wrong_phone_error" tools:ignore="UnusedResources">There is no existing account with this phone number.</string>
    <string name="password_reset_success">Your password has been successfully reset.</string>
    <string name="email_can_not_be_empty">Email cannot be empty.</string>
    <string name="phone_can_not_be_empty">Phone cannot be empty.</string>
    <string name="pending">Pending</string>
    <string name="pending_content">Your bank account will be connected soon.</string>
    <string name="pending_time_content">Please wait a few moments.</string>
    <string name="congrats">Congrats!</string>
    <string name="bank_account_connection_success">Connection to your bank account has been successful.\n\n<b>You are approved for %s.</b></string>
    <string name="cash_out">Cash out</string>
    <string name="take_me_to_home">Take me to homepage</string>
    <string name="connection_failed">Connection failed</string>
    <string name="bank_account_connection_fail">Connection to your bank account has failed.</string>
    <string name="duplicate_account">Duplicate account</string>
    <string name="bank_account_already_in_use">Your bank account has already been used.</string>
    <string name="go_back_to_home">Go back to Homepage</string>
    <string name="claim_cash_title">Claim cash now!</string>
    <string name="claim_cash_cash_amount">Cash amount</string>
    <string name="quiz_first_question">Have you ever sent money to loved ones or friends abroad?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="help_description">We will do our best to reply to each message within 24 hours.</string>
    <string name="help_text_us">Text us</string>
    <string name="help_email_us">Email us</string>
    <string name="help">Help</string>
</resources>