<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="QuizQuestionItemBinding">

        <variable
            name="title"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_question"
            style="@style/TextView.H6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{title}"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/quiz_first_question" />

        <RadioGroup
            android:id="@+id/question_rg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_16dp"
            app:layout_constraintEnd_toEndOf="@id/tv_question"
            app:layout_constraintStart_toStartOf="@id/tv_question"
            app:layout_constraintTop_toBottomOf="@id/tv_question">

            <RadioButton
                android:id="@+id/rb_yes"
                style="@style/CashliRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/rb_no"
                style="@style/CashliRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>