<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class=".OnboardingBinding">

        <variable
            name="viewModel"
            type="com.wolfpackdigital.cashli.presentation.onboarding.OnboardingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorPrimaryDark">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dimen_12dp"
            app:layout_constraintBottom_toTopOf="@+id/dots_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_28dp"
            app:dotsColor="@color/colorGray76"
            app:dotsSize="@dimen/dimen_10dp"
            app:dotsSpacing="@dimen/dimen_4dp"
            app:dotsWidthFactor="1"
            app:layout_constraintBottom_toTopOf="@+id/tv_already_have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:progressMode="false"
            app:selectedDotColor="@color/colorWhite" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:viewModel="@{viewModel.toolbar}" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_already_have_account"
            style="@style/TextView.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_28dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorGrayB6"
            app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
            app:layout_constraintEnd_toStartOf="@+id/tv_sign_in"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_sign_in"
            style="@style/TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginBottom="@dimen/dimen_28dp"
            android:onClick="@{() -> viewModel.signIn()}"
            android:text="@string/sign_in"
            android:textColor="@color/colorGrayDC"
            app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_already_have_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_account"
            style="@style/Widget.Cashli.Button.Accent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_28dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:onClick="@{() -> viewModel.createAccount()}"
            android:text="@string/create_account"
            app:layout_constraintBottom_toTopOf="@+id/btn_get_support"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_support"
            style="@style/Widget.Cashli.Button.NoBackground"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:onClick="@{() -> viewModel.getSupport()}"
            android:text="@string/get_support"
            android:textColor="@color/colorGrayDC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>