<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class=".LinkBankAccountBinding">

        <variable
            name="linkBankAccountInfo"
            type="com.wolfpackdigital.cashli.presentation.entities.LinkBankAccountInfo" />

        <variable
            name="inflatedVisibility"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_link_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout_20dp"
        android:visibility="@{inflatedVisibility}">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_link_background" />

        <ImageView
            android:id="@+id/iv_exclamation_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_exclamation_mark" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_message_one"
            style="@style/TextView.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/link_account_message_one"
            android:textAlignment="center"
            android:textSize="@dimen/size_20sp"
            app:layout_constraintBottom_toTopOf="@id/iv_lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_exclamation_mark" />

        <ImageView
            android:id="@+id/iv_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="@id/tv_message_one"
            app:layout_constraintTop_toBottomOf="@id/tv_message_one"
            app:srcCompat="@drawable/ic_lock_primary_dark" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_message_two"
            style="@style/TextView.Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:lineSpacingExtra="@dimen/dimen_4dp"
            android:text="@string/link_my_bank_account_message_four"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_lock"
            app:layout_constraintTop_toTopOf="@id/iv_lock"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_link_account"
            style="@style/Widget.Cashli.Button.PrimaryDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_marginBottom="@dimen/dimen_24dp"
            android:onClick="@{() -> linkBankAccountInfo.onLinkBankAccountAction()}"
            android:text="@string/link_your_bank_account"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_message_two"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>